Update 2. 실행 컨텍스트(Execution Context).md

--- a/코어 자바스크립트(Core JavaScript)/2. 실행 컨텍스트(Execution Context).md
+++ b/코어 자바스크립트(Core JavaScript)/2. 실행 컨텍스트(Execution Context).md
@@ -3,8 +3,13 @@
 - 스택(stack)과 큐(queue)
 	- 스택: 한 쪽 끝에서만 자료를 넣고 뺄 수 있는 자료구조, 후입선출
 	- 큐: 한 쪽에서는 삽입, 다른 한쪽에서는 삭제할 수 있는 자료구조, 선입선출
+
+![큐 스택](https://user-images.githubusercontent.com/82931725/185349453-d61a1436-c67e-4808-9bf4-67b222a866dc.png)
+
 - VariableEnvironment: 현재 컨텍스트 내의 식별자들에 대한 정보
 - LexicalEnvironment: VariableEnvironment와 같지만 변경 사항이 실시간으로 변경
+![실행 컨텍스트](https://user-images.githubusercontent.com/82931725/185349654-a42b0183-b6fe-4ace-a3f4-27683748f95e.png)
+
 
 #### 호이스팅(Hoisting)
 - 코드가 실행하기 전 변수선언/함수선언이 해당 스코프의 최상단으로 끌어 올려진 것 같은 현상을 말함
@@ -27,3 +32,4 @@ var 함수표현식 = function () {
 
 #### 스코프 체인(Scope Chain)
 - 스코프(scope): 식별자에 대한 유효범위
+![스코프 체인](https://user-images.githubusercontent.com/82931725/185349689-e6c6e3c3-185f-42da-89e5-3a5f8b4cc733.png)
