--- a/코어 자바스크립트(Core JavaScript)/5. 클로저(Closure).md
+++ b/코어 자바스크립트(Core JavaScript)/5. 클로저(Closure).md
@@ -13,6 +13,10 @@ var outer2 = outer();
 console.log(outer2()); // 2
 console.log(outer2()); // 3
 ```
+
+![clourse](https://user-images.githubusercontent.com/82931725/186336484-258fefb9-52ed-47d1-af92-b4d626b136af.jpg)
+
+
 - return이 없이도 클로저가 발생하는 경우
 ```javascript
 // DOM의 메서드에 등록할 handler 함수 내부에서 지역변수를 참조
