--- a/코어 자바스크립트(Core JavaScript)/6. 프로토타입(Prototype).md
+++ b/코어 자바스크립트(Core JavaScript)/6. 프로토타입(Prototype).md
@@ -4,7 +4,8 @@
 	```javascript
 	var instance = new Constructor();
 	```
-	![123](https://user-images.githubusercontent.com/82931725/186336541-b3adcfda-f721-47ad-bb70-c76bff9c4400.png)
+	![images_hyounglee_post_c3a4c65b-6071-4805-9fb5-99fb7dba9d80_image](https://user-images.githubusercontent.com/82931725/186338338-9b8b18a3-1221-4c67-b3af-b5314cb19950.png)
+
 	- 어떤 생성자 함수를 new 연산자와 함께 호출
 	- Constructor에서 정의된 내용을 바탕으로 새로운 인스턴스가 생성
 	- 이떄 instance에는 _ _ proto _ _ 라는 프로퍼티가 자동으로 부여됨
