--- a/코어 자바스크립트(Core JavaScript)/7. 클래스(Class).md
+++ b/코어 자바스크립트(Core JavaScript)/7. 클래스(Class).md
@@ -6,9 +6,13 @@
 - 상위 클래스의 조건을 충족하면서 더욱 구체적인 조건이 추가된 것이 하위 클래스
 - ES6에서 클래스 문법이 추가
 	- 일정 부분은 프로토타입을 활용하고 있음
+	
+![Class](https://user-images.githubusercontent.com/82931725/186549658-43452c8d-a437-42da-829a-7ab8aa6fcb75.png)
+
 - 클래스 상속을 흉내 내기 위한 방법
 	- SubClass.prototype에 SuperClass의 인스턴스를 할당 후 프로퍼티를 모두 삭제
 	- 빈 함수(Bridge)를 활용하는 방법
 	- Object.create를 이용하는 방법
 	- ES6에서는 상당한 간단하게 처리됨
 
+![Class2](https://user-images.githubusercontent.com/82931725/186549678-42aeed8b-52c1-430b-ba30-bf5215d08b3c.png)
